<resources>

    <string name="app_name">TravelAux</string>
    <string name="menu_settings">Settings</string>
    <string name="button_send">Send</string>
    <string name="title_activity_camera">Take a picture of the logo</string>
    <string name="title_activity_single_place">Place Details</string>
    <string name="title_activity_feature_extraction">Feature Extraction</string>
    <string name="title_activity_review_submit">Submit Review</string>
    <string name="find">Find</string>
    <string name="manually">Key in the name manually</string>
    <string name="capture">Capture</string>
    <string name="font_colour">Font Colour</string>
    <string name="next">Next</string>
    <string name="start">Start!</string>
    <string name="canvas">Pre-processing canvas</string>
    <string name="dev_mode">Developer mode (Show pre-processing)</string>
    <string name="in_text1">Location data retrieval and social networking service for Android.</string>
    <string name="in_text2">•  To recognize the name of the place, press \'Start\' and point the crosshair towards the logo of the place, making sure to point the center towards the logo\'s font colour.</string>
    <string name="in_text3">•  Alternatively, you can bypass image recognition by manually inputting the name of the place in the textbox and pressing \'Find\'.</string>
    <string name="in_text4">Enabling this will display the 3 intermediate text extraction steps that take place after the image was taken, but before OCR occurs. This is turned off by default for time efficiency.</string>
    <string name="submit_new">Submit New Review</string>
    <string name="logged_in_as">Logged In As</string>
    <string name="back">Back</string>
    <string name="submit_review">Submit Review</string>
    <string name="address">Address:</string>
    <string name="user_reviews">User reviews:</string>
    <string name="name">Name:</string>

</resources>