<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ccc"
    android:orientation="vertical">

    <!-- Reference (hidden label) -->

    <TextView
        android:id="@+id/reference"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <!-- Name Label -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="10dip"
        android:text="@string/name"
        android:textSize="16dp"
        android:textStyle="bold" />

    <!--  Name Value -->

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#222299"
        android:textSize="30dp" />

    <!-- Description Value -->

    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#222299" />

    <!-- Rating Bar -->

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-25dp"
        android:layout_marginTop="-5dip"
        android:clickable="false"
        android:isIndicator="true"
        android:longClickable="false"
        android:maxHeight="47dip" />

    <!-- Address Label -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="15dip"
        android:text="@string/address"
        android:textStyle="bold" />

    <!--  Address Value -->

    <TextView
        android:id="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#222299" />

    <!-- Phone Number Value -->

    <TextView
        android:id="@+id/phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textColor="#222299" />

    <!-- Location Value -->

    <TextView
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="15dip"
        android:textColor="#222299" />

    <!-- Reviews Label -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="10dip"
        android:text="@string/user_reviews"
        android:textColor="#111155"
        android:textSize="24dp"
        android:textStyle="bold" />

</LinearLayout>